--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,12 @@ updates:
     directory: /
     schedule:
       interval: weekly
+    groups:
+      fish-shop:
+        applies-to: version-updates
+        patterns:
+          - fish-shop/indent-check
+          - fish-shop/install-fish-shell
+          - fish-shop/install-plugin
+          - fish-shop/run-fishtape-tests
+          - fish-shop/syntax-check
